--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ env:
     - CONDA_CHANNELS='biobuilds conda-forge'
     - CONDA_CHANNEL_PRIORITY=True
     - NUMPY_VERSION=stable
+    - DEBUG=True
   matrix:
     - NAME='minimal' PYTHON_VERSION=2.7 SETUP_CMD='--with-memleak'
 
